--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
 - jekyll-remote-theme
-title: [The title of your site]
-description: [A short description of your site's purpose]
-show_downloads: [true]
-google_analytics: [Your Google Analytics tracking ID]
+title: futura.js
+description: Futura.js website, the javascript library for animations and carousels
+show_downloads: true
+google_analytics: G-V023PDPSMZ
