--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
 - jekyll-remote-theme
-title: futura.js
+title: JavaScript library
 description: Futura.js website, the javascript library for animations and carousels
 show_downloads: true
 google_analytics: G-V023PDPSMZ
