--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,12 @@
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
 - jekyll-remote-theme
+- jekyll-readme-index
 title: JavaScript library
 description: Futura.js website, the javascript library for animations and carousels
 show_downloads: true
 google_analytics: G-V023PDPSMZ
+readme_index:
+  enabled:          true
+  remove_originals: false
+  with_frontmatter: false
