--- a/_config.yml
+++ b/_config.yml
@@ -7,3 +7,4 @@ description: Futura.js website, the javascript library for animations and carous
 show_downloads: true
 google_analytics: G-V023PDPSMZ
 markdown: GFM
+site_favicon: futurajs.png
