add favicon for jekyll theme

--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@ remote_theme: pages-themes/cayman@v0.2.0
 plugins:
 - jekyll-remote-theme
 - jekyll-readme-index
+- jekyll-seo-tag
 title: JavaScript library
 description: Futura.js website, the javascript library for animations and carousels
 show_downloads: true
